# festival-hs

./: .gitignore  CHANGELOG.md  README.org  cabal.project  festival.cabal  test.pcm  test.txt
examples/: FestivalHs.hs  ThisIsATest.hs  examples.cabal
src/: Festival.hs
src-c/: EST-wrapper.cpp  EST-wrapper.h  festival-c-wrapper.cpp  festival-wrapper.h
src/Festival/: C.chs  C.hs
